--- a/css/Marta2.css
+++ b/css/Marta2.css
@@ -1,7 +1,7 @@
 body {
     background: url("../assets/stiftsbibliothek-abadia-st-gallen-suica-interno.jpg") no-repeat center center fixed;
-    background-color: #cccccc;
-    color:#cccccc;
+    
+  color:White;
     
     -webkit-background-size: cover;
   -moz-background-size: cover;
