--- a/css/Neymar2.css
+++ b/css/Neymar2.css
@@ -1,6 +1,6 @@
 body {
-    background: url("../assets/stiftsbibliothek-abadia-st-gallen-suica-interno.jpg") no-repeat center center fixed;
-    color: #cccccc;
+    background: url("../assets/MoebiusBkDesertScape-L.jpg") no-repeat center center fixed;
+    background-color: #cccccc;
     
     -webkit-background-size: cover;
   -moz-background-size: cover;
