Alterações corrigindo erros

--- a/css/Neymar3.css
+++ b/css/Neymar3.css
@@ -1,6 +1,6 @@
 body {
-    background: url("../assets/tworoom05.jpg") no-repeat center center fixed;
-    background-color: #cccccc;
+    background: url("../assets/abre-campo1.jpg") no-repeat center center fixed;
+    color:white;
     
     -webkit-background-size: cover;
   -moz-background-size: cover;
