--- a/css/Projeto1.css
+++ b/css/Projeto1.css
@@ -15,8 +15,12 @@ h2{
 }
 
 img{
-    width:33%;
-    height:33%;
+    /* width:33%;
+    height:33%; */
+    flex:33%;
+    width: 100%;
+    height:40vh;
+    object-fit: cover;
 }
 
 form{
@@ -25,3 +29,7 @@ form{
     
 }
 
+.images{display:flex;
+    
+
+}
